fix overlay positioning on firefox and ie

--- a/personalprofile.scss
+++ b/personalprofile.scss
@@ -50,18 +50,18 @@ $tablet:900px;
     color: white;
 }
 
-.top{
-        align-self:flex-end; // for arrow in about section
-        text-align:right;// aligns icon to right
-         font-size:2em;
-         padding-right:1em;
-         @media(min-width: $tablet){
-            padding-right:1em;
-         }
-         .fa{
-            color:black;
-         }
+.top {
+    align-self: flex-end; // for arrow in about section
+    text-align: right; // aligns icon to right
+    font-size: 2em;
+    padding-right: 1em;
+    @media(min-width: $tablet) {
+        padding-right: 1em;
     }
+    .fa {
+        color: black;
+    }
+}
 
 //---------------------------------------------------- Header
 .intro {
@@ -158,13 +158,12 @@ $tablet:900px;
                 }
             }
         }
-    
     }
 }
 
 //----------------------------------------------------Projects
 .projects {
-    padding-top:1em;
+    padding-top: 1em;
     // background:radial-gradient(circle,white 0%, black 100%);
     // background:center/cover no-repeat url("http://www.industryweek.com/site-files/industryweek.com/files/imagecache/large_img/uploads/2014/10/stage.jpg");
     .carousel-container {
@@ -181,9 +180,9 @@ $tablet:900px;
                 height: 150px;
             }
             @media(max-width:$tablet) {
-                &:nth-child(odd){
-                background: rgba(217, 217, 224, 0.35); 
-            }
+                &:nth-child(odd) {
+                    background: rgba(217, 217, 224, 0.35);
+                }
                 &:nth-child(even) {
                     background: #DCDCDD;
                 }
@@ -223,12 +222,12 @@ $tablet:900px;
                             color: black; // change default <a> color
                         }
                     }
-                    .caption-title{
-                        padding-top:1em;
-                        margin:0; // remove default
-                        clear:both; // clears caption from floated img
+                    .caption-title {
+                        padding-top: 1em;
+                        margin: 0; // remove default
+                        clear: both; // clears caption from floated img
                     }
-                    ul{
+                    ul {
                         text-align: left;
                     }
                     img {
@@ -255,10 +254,12 @@ $tablet:900px;
                     flex-flow: row nowrap;
                     justify-content: space-between;
                     align-items: center;
-                    text-align: center;
                     position: absolute;
+                    left:0; // required for firefox and ie (fix overlay positioning)
                     width: 100%;
                     height: 100%;
+                    text-align: center;
+
                 }
                 .left-bar {
                     display: flex;
@@ -266,11 +267,10 @@ $tablet:900px;
                     justify-content: center;
                     flex: 1 1 10%;
                     height: 100%;
-                   
                     .left-arrow {
                         @include hoverColor;
                         font-size: 20pt;
-                        color:white;
+                        color: white;
                         &:hover {
                             cursor: pointer;
                         }
@@ -283,7 +283,7 @@ $tablet:900px;
                     width: 100%;
                     height: 100%;
                     position: relative;
-                    .display-title{
+                    .display-title {
                         @include hoverColor;
                     }
                     .center {
@@ -411,16 +411,16 @@ $tablet:900px;
             flex-flow: column wrap;
             align-items: center;
             flex: 1 1 100%;
-            text-align:center;
+            text-align: center;
             @media(min-width: $tablet) {
                 flex: 1 1 50%;
             }
             .description {
                 max-width: 25em;
-                height:5em; // aligns images vertically
-                margin:1em;
-                font-size:1.2em;
-                background:rgba(255,255,255,0.4);
+                height: 5em; // aligns images vertically
+                margin: 1em;
+                font-size: 1.2em;
+                background: rgba(255, 255, 255, 0.4);
             }
             img {
                 max-width: 100%;
@@ -434,8 +434,8 @@ $tablet:900px;
 .contact {
     padding: 2em;
     background: #e5e6e9;
-    @media(min-width:$tablet){
-        padding:2em 0;
+    @media(min-width: $tablet) {
+        padding: 2em 0;
     }
     .contact-icons {
         display: flex;
@@ -444,17 +444,17 @@ $tablet:900px;
             flex-flow: row nowrap;
             justify-content: space-around;
             align-items: center;
-            padding:0;    // remove default
+            padding: 0; // remove default
         }
-        &>*{
-            padding-top:1em;
+        &>* {
+            padding-top: 1em;
         }
         // align icons to middle of text
         .fa {
             vertical-align: middle;
-            font-size:1.5em;
-            @media(min-width:$tablet){
-                font-size:2em;
+            font-size: 1.5em;
+            @media(min-width: $tablet) {
+                font-size: 2em;
             }
         }
         // change default <a> color
